Source/JavaScriptCore/API/ObjcRuntimeExtras.h
@@ -192,9 +192,19 @@ typename DelegateType::ResultType parseObjCType(const char*& position)
         }
 
         if (*position == '"') {
-            const char* begin = ++position;
-            position = index(position, '"');
-            return DelegateType::typeOfClass(begin, position++);
+            const char* begin = position + 1;
+            const char* protocolPosition = index(begin, '<');
+            const char* endOfType = index(begin, '"');
+            position = endOfType + 1;
+
+            // There's no protocol involved in this type, so just handle the class name.
+            if (!protocolPosition || protocolPosition > endOfType)
+                return DelegateType::typeOfClass(begin, endOfType);
+            // We skipped the class name and went straight to the protocol, so this is an id type.
+            if (begin == protocolPosition)
+                return DelegateType::typeId();
+            // We have a class name with a protocol. For now, ignore the protocol.
+            return DelegateType::typeOfClass(begin, protocolPosition);
         }
 
         return DelegateType::typeId();
